--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
+  <title>Video.js | HTML5 Video Player</title>
 
-    <title>Video.js | HTML5 Video Player</title>
-    <link href="http://vjs.zencdn.net/5.0.2/video-js.css" rel="stylesheet">
-    <script src="http://vjs.zencdn.net/ie8/1.1.0/videojs-ie8.min.js"></script>
-    <script src="http://vjs.zencdn.net/5.0.2/video.js"></script>
+  <!-- Chang URLs to wherever Video.js files will be hosted -->
+  <link href="video-js.css" rel="stylesheet" type="text/css">
+  <script src="jquery-1.11.2.js"></script>
+  <!-- video.js must be in the <head> for older IEs to work. -->
+  <script src="video.js"></script>
+
+  <!-- Unless using the CDN hosted version, update the URL to the Flash SWF -->
   <script>
     videojs.options.flash.swf = "video-js.swf";
   </script>
-  <!--[if gte IE 8]>
-  <script src="http://api.html5media.info/1.1.4/html5media.min.js"></script>
-   <![endif]-->
-  <!--<script >
+
+  <script >
     window.onload = function(){
       var player = videojs('example_video_1');
 // 检测播放时间
       player.on('timeupdate', function () {
         console.log('当前播放时间： ='+ player.currentTime());
+        console.log($(".vjs-default-skin").attr("class"))
       });
-    // 开始或恢复播放
-    player.on('play', function() {
-      console.log('开始/恢复播放');
-    });
-    // 暂停播放
-    player.on('pause', function() {
-      console.log('暂停播放');
-    });
+      // 开始或恢复播放
+      player.on('play', function() {
+        console.log('开始/恢复播放');
+      });
+      // 暂停播放
+      player.on('pause', function() {
+        console.log('暂停播放');
+      });
     }
-  </script>-->
+  </script>
 </head>
-
 <body>
 
-  <video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264" poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
-    <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-    <source src="http://vjs.zencdn.net/v/oceans.webm" type="video/webm">
-    <source src="http://vjs.zencdn.net/v/oceans.ogv" type="video/ogg">
-    <track kind="captions" src="../shared/example-captions.vtt" srclang="en" label="English"></track>
-    <!-- Tracks need an ending tag thanks to IE9 -->
-    <track kind="subtitles" src="../shared/example-captions.vtt" srclang="en" label="English"></track>
-    <!-- Tracks need an ending tag thanks to IE9 -->
-    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+  <video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="640" height="264"
+      poster="http://video-js.zencoder.com/oceans-clip.png"
+      data-setup="{}" style="width:100%;height:100%;">
+    <source src="http://vjs.zencdn.net/v/oceans.mp4" type='video/mp4' />
+    <source src="http://vjs.zencdn.net/v/oceans.webm" type='video/webm' />
+    <source src="http://vjs.zencdn.net/v/oceans.ogv" type='video/ogg' />
+    <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
+    <track kind="subtitles" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
   </video>
-</body>
 
+</body>
 </html>
